@@ -1,3 +1,4 @@
+07052013 -> jonnyboy -> fixed issue with postprocess threaded nfo
 07052013 -> Miatrix  -> Added 2 options to control the video sample to the site edit screen.
 						One is segments to download.  If you find your samples arn't long enough you can increase this though it will mean that you
 						download more from your usenet provider.
